update first ,second

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div class="header-info">
         <a href="#"><img src="imgs/Incognito_-_Spy_Silhouette_Logo-removebg-preview.png" alt="logo"></a>
         <ul>
-          <a href="#"><li>Home</li></a>
-          <hr class="active">
+          <a href="#"><li class="active">Home</a>
+
           <a href="#"><li > <div class="first">Men Section</div></li></a>
           
           <a href="#"><li> <div class="first">Kids Section</div></li></a>
