--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="welcome-item">
               <i class="fa-solid fa-money-check-dollar welcome-icon"></i>
               <h3 class="welcome-title">Affordable prices</h3>
-              <p class="welcome-p"> Enjoy exceptional style at prices that won’t break the bank. Fashionable finds are now affordable for everyone!</p>
+              <p class="welcome-p">Exceptional style at prices that won’t break the bank. Fashionable finds are now affordable for everyone!</p>
               <br>
               <a  class="welcome-link" href="#">See More!</a>
               <br><br>
